--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
 	<head>
 		<title> Welcome! </title>
-		About Me:
+		<link rel='stylesheet' href='index.css'/>
 	</head>
-	<body> <p> I am 22 years old, I live in Provo, UT, I am a Computer Science Major and a Business Minor, I love my husband Sebastian and I speak Spanish! </p>
+	<body>
+	<ul class = 'menu'>
+		<li class='menuelement'><a href="http://hannahknelson.digital/">Home</a></li>
+  		<li class='menuelement'><a href="https://www.youtube.com/watch?v=3z2j6F8fZII">You're welcome</a></li>
+  		<li class='menuelement'><a href="http://lab1.hannahknelson.digital/">Lab 1</a></li>
+	</ul>		
+	<div class = 'center'> <img id='image' src = 'HannahSebastian_AshlynStottPhotography-45.jpg'/> </div>
+	<h1 class='header'> Hannah Nelson </h1>
+	<hr>
+	<h1> About Me: </h1>
+	<p> I am 22 years old, I live in Provo, UT, I am a Computer Science Major and a Business Minor, I love my husband Sebastian and I speak Spanish! </p>
 	<hr>
 	<h1> Projects: </h1>
 	<ul> 
@@ -18,7 +28,7 @@
 		<li> Full-time missionary for 1.5 years </li>
 		<li> Programmer and database manager </li>
 		<li> Certified medical interpreter </li>
-		<ol>
+		</ol>
 			<hr>
 			<h1> Contact: </h1>
 			<ul>
