--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 	<h1> About Me: </h1>
 	<p> I am 22 years old, I live in Provo, UT, I am a Computer Science Major and a Business Minor, I love my husband Sebastian and I speak Spanish! </p>
 	<hr>
+	<div class = 'projects'>
 	<h1> Projects: </h1>
 	<ul> 
 		<li>Database for management of thousands of academic articles used to create translation software </li>
 		<li>A program that can turn a grayscale image into a black and white contrast or color image </li>
 		<li>A tokenizer, lexer, and interpreter program </li>
 	</ul>
+	</div> <div class = 'experience'>
 	<hr>
 	<h1> Experience: </h1>
 	<ol> 
@@ -28,7 +30,7 @@
 		<li> Full-time missionary for 1.5 years </li>
 		<li> Programmer and database manager </li>
 		<li> Certified medical interpreter </li>
-		</ol>
+	</ol> </div>
 			<hr>
 			<h1> Contact: </h1>
 			<ul>
