Update Windy City Photography

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<ul class = 'menu'>
 		<li class='menuelement'><a href="http://hannahknelson.digital/">Home</a></li>
   		<li class='menuelement'><a href="https://www.youtube.com/watch?v=3z2j6F8fZII">You're welcome</a></li>
-  		<li class='menuelement'><a href="http://lab1.hannahknelson.digital/">Lab 1</a></li>
+		<li class='menuelement'><a href="http://wcphotography.hannahknelson.digital/">Windy City Photography</a></li>
 	</ul>		
 	<div class = 'center'> <img id='image' src = 'HannahSebastian_AshlynStottPhotography-45.jpg'/> </div>
 	<h1 class='header'> Hannah Nelson </h1>
