--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<li class='menuelement'><a href="http://hannahknelson.digital/">Home</a></li>
   		<li class='menuelement'><a href="https://www.youtube.com/watch?v=3z2j6F8fZII">You're welcome</a></li>
 		<li class='menuelement'><a href="http://lab1.hannahknelson.digital/">Windy City Photography</a></li>
+		<li class='menuelement'><a href="/pages/C4Activity.html">La Pina Loca</a></li>
 	</ul>		
 	<div class = 'center'> <img id='image' src = 'HannahSebastian_AshlynStottPhotography-45.jpg'/> </div>
 	<h1 class='header'> Hannah Nelson </h1>
