--- a/pages/C4Activity.html
+++ b/pages/C4Activity.html
@@ -5,10 +5,10 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- homebrewed CSS-->
-  <link rel="stylesheet" href="/index.css" />
+  <link rel="stylesheet" href="/css/C4.css" />
   <!-- meta data needed to support mobile device viewing -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>La Pina Loca</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" >
             <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active" style="color: #14350e;">
                 <a class="nav-link" href="/pages/C4Activity.html">Menu</a>
